# group_gemm

./: CMakeLists.txt
composable_kernel/include/tensor_operation/: threadwise_gemm.hpp
driver/: CMakeLists.txt
driver/include/: device_convolution_implicit_gemm_v4r4_nchw_kcyx_nkhw.hpp  tensor.hpp
driver/src/: conv_driver.cpp
script/: cmake-hip.sh
